# InMacStudyC

./: 10.txt  2.txt  CMakeLists.txt  Iow.c  Stringone.c  T1.c  T1.cpp  T2.c  T3.c  T4.c  bigtfsmall.c  equre.c  filebigsmall.c  filecopy.c  io.c  jiami1.c  jiami2.c  jiegouti.c  jiegouti1.c  jiegouti2.c  jiegouti3.c  jiegoutiarr.c  jiegoutiasName.c  jiemi1.c  jiemi2.c  main.c  meiju.c  pointstr.c  relloc.c  str.c  string.c  zuoye.c  zuoye2.c
