cmake_minimum_required(VERSION 3.19)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c T1.c T2.c T3.c T4.c relloc.c str.c string.c pointstr.c equre.c Stringone.c bigtfsmall.c zuoye.c zuoye2.c jiegouti.c jiegouti1.c jiegouti2.c jiegouti3.c jiegoutiarr.c jiegoutiasName.c meiju.c io.c Iow.c filecopy.c filebigsmall.c)